# minecraft_modpack

./: .gitignore  .packwizignore  CNAME  Cargo.toml  build.rs  dioxus-cli.nix  flake.nix  index.html  index.toml  pack.toml
.github/workflows/: build.yml
assets/: modpack_generated.json
cache_modpack/: Cargo.toml
cache_modpack/src/: main.rs
config/: attributefix.json  configured-developer.toml  embeddium-fingerprint.json  packetfixer.properties  resourceful-config-web.json  scguns-client.toml  scguns-common.toml
config/apotheosis/: enchantments.cfg
config/betterstrongholds/forge-1_20/: armorstands.json
config/brandon3055/: DraconicEvolution.cfg
config/jei/: ingredient-list-mod-sort-order.ini
config/spark/tmp/: spark-112b6aa137eba-profile-data.jfr.tmp  spark-d1743256ed51-profile-data.jfr.tmp
config/voicechat/: username-cache.json
config/waila/: category_entries.json5
minecraft_modpack/: Cargo.toml
minecraft_modpack/assets/: modpack.json
minecraft_modpack/src/: main.rs
modpack/: index.toml
modpack/config/: cucumber-tags.json  rpgdifficulty.json  sophisticatedcore-common.toml  theoneprobe-client.toml  vmp.properties
modpack/config/apotheosis/: names.cfg
modpack/config/betterdeserttemples/forge-1_20/: itemframes.json
modpack/config/betterfortresses/forge-1_20/: itemframes.json
modpack/config/betterstrongholds/forge-1_20/: itemframes.json  ores.json
modpack/config/jei/: recipe-category-sort-order.ini
modpack/config/sanitydim/: default.toml
modpack/config/spark/tmp/: spark-117feef621f28-profile-data.jfr.tmp
modpack/config/voicechat/: voicechat-client.properties
modpack/config/waila/: waila_plugins.json5
modpack/mods/: advancedperipherals.pw.toml  bucketlib.pw.toml  camera-mod.pw.toml  create-framed.pw.toml  draconic-evolution.pw.toml  enigmatic-legacy.pw.toml  entity-model-features.pw.toml  essential.pw.toml  industrial-foregoing-souls.pw.toml  inventory-profiles-next.pw.toml  item-collectors.pw.toml  jadens-nether-expansion.pw.toml  mariums-soulslike-weaponry.pw.toml  mekanism-lasers.pw.toml  moonlight.pw.toml  oculus.pw.toml  re-avaritia.pw.toml  tempad.pw.toml
modpack/resourcepacks/: aquamarine-resoucepack-1.20+.pw.toml
mods/: almanac-lib.pw.toml  create-liquid-fuel.pw.toml  dtns-palette-of-paws.pw.toml  dynamic-village.pw.toml  entitytexturefeatures.pw.toml  experience-obelisk.pw.toml  hyperbox.pw.toml  immediatelyfast.pw.toml  l_enders-cataclysm.pw.toml  libipn.pw.toml  more-mekanism-processing.pw.toml  mystical-agradditions.pw.toml  observable.pw.toml  prometheus.pw.toml  rpgdifficulty.pw.toml  scorched-guns-2.pw.toml  sodium-options-api.pw.toml  sophisticated-storage.pw.toml  timeless-and-classics-zero.pw.toml
resourcepacks/: fresh-animations.pw.toml
src/: main.rs
