[package]
name = "cache_modpack"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
tokio = { version = "1", features = ["full"] }

